# bc-workshop-data-science

./: Pipfile  README.md  pyproject.toml  requirements.txt
00_Introduction_Setup/: 00_Introduction_Setup.ipynb
01_Load_Clean_Visualize/: 01_Load_Clean_Visualize.ipynb  01_Task_OlympicHistory.ipynb  01_Task_OlympicHistory_template.ipynb
02_Prepare_Transform_Extract/: 02_Prepare_Transform_Extract.ipynb
03_Introduction_Modeling/: 03_Introduction_Modeling.ipynb  03_NeuralNetworks_MNIST.ipynb  03_NeuralNetworks_MNIST_deployment.py  03_Task_BreastCancerClassification.ipynb  03_Task_BreastCancerClassification_template.ipynb
resources/data/: breast_cancer.csv
